--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "1.1.1",
     "formik": "2.2.9",
     "line-awesome": "1.3.0",
+    "moment": "^2.30.1",
     "nouislider": "15.5.1",
     "postcss-loader": "^7.0.2",
     "prism-react-renderer": "1.3.1",
@@ -37,6 +38,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-table": "^7.7.0",
+    "react-toastify": "^10.0.5",
     "react-topbar-progress-indicator": "4.1.1",
     "socicon": "3.0.5",
     "yup": "^1.0.0"
