--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "apexcharts": "3.35.0",
     "axios": "0.26.1",
     "bootstrap": "5.3.0-alpha1",
-    "bootstrap-icons": "^1.5.0",
+    "bootstrap-icons": "^1.11.3",
     "chart.js": "3.7.1",
     "clsx": "1.1.1",
+    "dayjs": "^1.11.10",
     "formik": "2.2.9",
     "line-awesome": "1.3.0",
     "moment": "^2.30.1",
@@ -38,6 +39,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-table": "^7.7.0",
+    "react-to-pdf": "^1.0.1",
     "react-toastify": "^10.0.5",
     "react-topbar-progress-indicator": "4.1.1",
     "socicon": "3.0.5",
