--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "chart.js": "3.7.1",
     "clsx": "1.1.1",
     "dayjs": "^1.11.10",
+    "force": "^0.0.3",
     "formik": "2.2.9",
     "line-awesome": "1.3.0",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "nouislider": "15.5.1",
     "postcss-loader": "^7.0.2",
@@ -28,12 +30,14 @@
     "qs": "6.10.3",
     "react": "18.0.0",
     "react-apexcharts": "1.4.0",
+    "react-barcode": "^1.5.1",
     "react-bootstrap": "^2.7.0",
     "react-copy-to-clipboard": "5.1.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.51.2",
     "react-inlinesvg": "3.0.0",
     "react-intl": "5.25.0",
+    "react-number-format": "^5.3.4",
     "react-query": "3.38.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
@@ -52,6 +56,7 @@
     "@types/bootstrap": "5.1.10",
     "@types/chart.js": "2.9.37",
     "@types/jest": "27.4.1",
+    "@types/lodash": "^4.17.0",
     "@types/node": "16.11.27",
     "@types/prismjs": "1.26.0",
     "@types/qs": "6.9.7",
