--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@formatjs/intl-relativetimeformat": "10.0.1",
     "@fortawesome/fontawesome-free": "6.1.1",
     "@popperjs/core": "2.11.6",
+    "@reduxjs/toolkit": "^2.2.5",
     "ag-grid-react": "^31.2.0",
     "animate.css": "4.1.1",
     "apexcharts": "3.35.0",
-    "axios": "0.26.1",
+    "axios": "^0.26.1",
     "bootstrap": "5.3.0-alpha1",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "3.7.1",
@@ -39,6 +40,7 @@
     "react-intl": "5.25.0",
     "react-number-format": "^5.3.4",
     "react-query": "3.38.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
