--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
     "react-inlinesvg": "3.0.0",
     "react-intl": "5.25.0",
     "react-number-format": "^5.3.4",
+    "react-pdf-html": "^2.1.2",
     "react-query": "3.38.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-table": "^7.7.0",
-    "react-to-pdf": "^1.0.1",
     "react-toastify": "^10.0.5",
     "react-topbar-progress-indicator": "4.1.1",
     "socicon": "3.0.5",
