--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@formatjs/intl-relativetimeformat": "10.0.1",
     "@fortawesome/fontawesome-free": "6.1.1",
     "@popperjs/core": "2.11.6",
-    "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.2.5",
     "ag-grid-react": "^31.2.0",
     "animate.css": "4.1.1",
@@ -21,10 +20,14 @@
     "dayjs": "^1.11.10",
     "force": "^0.0.3",
     "formik": "2.2.9",
+    "html2canvas-pro": "^1.5.8",
+    "i": "^0.3.7",
+    "jspdf": "^2.5.1",
     "line-awesome": "1.3.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "nouislider": "15.5.1",
+    "npm": "^10.8.3",
     "postcss-loader": "^7.0.2",
     "prism-react-renderer": "1.3.1",
     "prism-themes": "1.9.0",
