--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "homepage": "",
   "dependencies": {
+    "@ag-grid-community/client-side-row-model": "~32.2.2",
+   "@ag-grid-community/csv-export": "~32.2.2",
+   "@ag-grid-enterprise/excel-export": "~32.2.2",
+   "@ag-grid-enterprise/master-detail": "~32.2.2",
+   "@ag-grid-community/react": "~32.2.2",
     "@formatjs/intl-pluralrules": "4.3.3",
     "@formatjs/intl-relativetimeformat": "10.0.1",
     "@fortawesome/fontawesome-free": "6.1.1",
     "@popperjs/core": "2.11.6",
     "@reduxjs/toolkit": "^2.2.5",
-    "ag-grid-react": "^31.2.0",
+    "ag-grid-react": "^31.3.4",
     "animate.css": "4.1.1",
     "apexcharts": "3.35.0",
     "axios": "^0.26.1",
